--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@ Have fun creating your portfolio on this template!!! -->
                   class="cta-btn text-color-main"
                   >Source Code</a
                 >
+                    <a
+                  href="https://videotubeapi-uukxbf8d.b4a.run./api/v1/healthcheck"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  >Live Preview</a
+                >
               </div>
             </div>
             <div class="project-wrapper__image">
@@ -288,6 +294,44 @@ Have fun creating your portfolio on this template!!! -->
                 <div class="thumbnail rounded">
                   <img
                     src="./assets/digital-library-online-education-concept-laptop-computer-colorful-books-d-rendering-digital-library-online-education-125338333.webp"
+                    class="img-fluid"
+                    alt="E-Library API"
+                    width="1366"
+                    height="767"
+                  />
+                </div>
+              </a>
+            </div>
+          </article>
+
+             <!-- Task Manager Project -->
+            <article class="row">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">Task Manager</h3>
+              <p class="project-wrapper__text-info">
+                A simple CRUD API built with TypeScript, Express, and MongoDB, showcasing essential backend development skills with strong typing, EJS templating, and seamless integration for managing tasks efficiently.
+              </p>
+              <div class="project-wrapper__text-btns">
+              
+                <a
+                  href="https://github.com/viraj-gavade/Task-Manager-TS-"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  >Source Code</a
+                >
+                <a
+                href="https://taskmanagertypescript-m3q18mq6.b4a.run/api/v1/tasks"
+                target="_blank"
+                class="cta-btn text-color-main"
+                >Live Preview</a
+              >
+              </div>
+            </div>
+            <div class="project-wrapper__image">
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <div class="thumbnail rounded">
+                  <img
+                    src="https://png.pngtree.com/thumb_back/fw800/background/20240209/pngtree-task-management-business-planning-app-illustration-vector-image_15623958.jpg"
                     class="img-fluid"
                     alt="E-Library API"
                     width="1366"
